--- a/EvalySI_App/EvalySI_App/Views/Shared/_Layout.cshtml
+++ b/EvalySI_App/EvalySI_App/Views/Shared/_Layout.cshtml
@@ -4,15 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EvalySI_App</title>
-    <link rel="stylesheet" href="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/css/site.css" />
-    <link rel="stylesheet" href="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/EvalySI_App.styles.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/EvalySI_App.styles.css" asp-append-version="true" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/images/Logotipo.png" alt="logo" />
+            <img src="~/images/Logotipo.png" alt="logo" />
             <a>Consultores en Servicios Integrales</a>
         </div>
     </header>
@@ -24,9 +24,9 @@
             &copy; 2025 - EvalySI_App
         </div>
     </footer> *@
-    <script src="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://pg-tesis-e9f5ialu1-anika-escotos-projects.vercel.app/js/site.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
