--- a/EvalySI_App/EvalySI_App/Views/Shared/_Layout.cshtml
+++ b/EvalySI_App/EvalySI_App/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - EvalySI_App</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/EvalySI_App.styles.css" asp-append-version="true" />
+    //<link rel="stylesheet" href="~/EvalySI_App.styles.css" asp-append-version="true" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
